--- a/src/app/shared/components/campos/input-date/input-date.component.html
+++ b/src/app/shared/components/campos/input-date/input-date.component.html
@@ -3,7 +3,7 @@
     <input  matInput
             readonly
             [matDatepicker]="picker"
-            [placeholder]="titulo"
+            [placeholder]="nome"
             [name]="controlName"
             [formControlName]="controlName"
             (click)="picker.open()">
