--- a/src/app/shared/components/campos/input-number/input-number.component.html
+++ b/src/app/shared/components/campos/input-number/input-number.component.html
@@ -5,7 +5,7 @@
             [min]="minimo"
             [max]="maximo"
             [step]="step"
-            [placeholder]="titulo"
+            [placeholder]="nome"
             [name]="controlName"
             [formControlName]="controlName">
     <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
