--- a/src/app/personagens/listagem-personagens/listagem-personagens.component.html
+++ b/src/app/personagens/listagem-personagens/listagem-personagens.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="app-title">Filmes Cadastrados</mat-toolbar>
+<mat-toolbar class="app-title">Personagens Cadastrados</mat-toolbar>
 
 <mat-card class="float-left margin10 filtro-listagem" >
   <form autocomplete="off" novalidate [formGroup]="filtrosListagem">
@@ -12,9 +12,9 @@
     </div>
     <div class="float-left width50">
       <div class="padding10">
-        <dio-input-select titulo="Gênero"
-                          controlName="genero"
-                          [opcoes]="generos"
+        <dio-input-select titulo="Elemento"
+                          controlName="elemento"
+                          [opcoes]="elementos"
                           [formGroup]="filtrosListagem">
         </dio-input-select>
       </div>
@@ -25,21 +25,21 @@
 <div  class="home-content"
       infiniteScroll
       (scrolled)="onScroll()"
-      *ngIf="filmes.length; else semRegistro">
-  <mat-card class="home-card" *ngFor="let filme of filmes">
+      *ngIf="s.length; else semRegistro">
+  <mat-card class="home-card" *ngFor="let personagem of personagens">
     <mat-card-header>
       <div mat-card-avatar></div>
-      <mat-card-title>{{filme.titulo}}</mat-card-title>
-      <mat-card-subtitle>{{filme.genero}}</mat-card-subtitle>
+      <mat-card-title>{{personagem.titulo}}</mat-card-title>
+      <mat-card-subtitle>{{personagem.genero}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image [src]="filme.urlFoto || semFoto" >
+    <img mat-card-image [src]="personagem.urlFoto || semFoto" >
     <mat-card-content>
       <p class="quebrar-linha">
-        {{filme.descricao || 'Nenhuma descrição informada'}}
+        {{personagem.descricao || 'Nenhuma descrição informada'}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button color="accent" mat-raised-button (click)="abrir(filme.id)">ABRIR</button>
+      <button color="accent" mat-raised-button (click)="abrir(personagem.id)">ABRIR</button>
     </mat-card-actions>
   </mat-card>
 </div>
