--- a/src/app/shared/components/alerta/alerta.component.html
+++ b/src/app/shared/components/alerta/alerta.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>{{alerta.titulo}}</h1>
+<h1 mat-dialog-title>{{alerta.nome}}</h1>
 <div mat-dialog-content>
   <p>{{alerta.descricao}}</p>
 </div>
