--- a/src/app/shared/components/campos/input-select/input-select.component.html
+++ b/src/app/shared/components/campos/input-select/input-select.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
-    <mat-select [placeholder]="titulo" [formControlName]="controlName">
+    <mat-select [placeholder]="nome" [formControlName]="controlName">
       <mat-option *ngFor="let opcao of opcoes" [value]="opcao">{{opcao}}</mat-option>
     </mat-select>
     <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
