--- a/src/app/shared/components/campos/input-text/input-text.component.html
+++ b/src/app/shared/components/campos/input-text/input-text.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
     <input  matInput
-            [placeholder]="titulo"
+            [placeholder]="nome"
             [name]="controlName"
             [formControlName]="controlName">
     <mat-error *ngIf="validacao.hasErrorValidar(formControl, 'required')">Campo obrigatório</mat-error>
