--- a/src/app/shared/components/campos/input-textarea/input-textarea.component.html
+++ b/src/app/shared/components/campos/input-textarea/input-textarea.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
     <textarea  matInput
-            [placeholder]="titulo"
+            [placeholder]="nome"
             [name]="controlName"
             [formControlName]="controlName">
     </textarea>
