--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -30,3 +30,16 @@ q:before, q:after {
 a, ins {
 	text-decoration: none;
 	}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+blockquote, q {
+	quotes: none;
+}
+ol, ul {
+	list-style: none;
+}
